# Doku

./: .gitignore  AGENTS.md  PRODUCT.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.agent/security/: audit-2026-07-10.md
.impeccable/critique/: 2026-07-10T09-03-59Z__src-components-documentview-svelte.md  2026-07-10T09-41-16Z__src-components-documentview-svelte.md  2026-07-17T07-11-56Z__src-components-copilotpanel-svelte.md
docs/: README.md
docs/adr/: 0001-stack-tauri-svelte.md  0002-moteur-wysiwyg-cm6-live-preview.md  0003-stockage-snapshots-appdata.md  0004-io-fichiers-plugins-officiels.md  0005-scope-fs-large-assume.md  0006-copilote-ia-ollama-sidecar-cpu.md  0007-recherche-index-memoire.md  0008-pipeline-export-pdf-window-print.md  0009-renderer-markdown-marked.md  0010-export-docx-lib-lazy.md  0011-lecture-pdf-pdfjs.md  0012-cycle-de-vie-sidecar-ollama.md  0013-fournisseur-openai-optionnel.md  0014-connexion-compte-openai-codex.md  0015-stack-rag-embeddings-locaux.md  0016-backend-inference-npu-foundry-local.md  README.md
docs/journal/: 2026-07-08.md  2026-07-09.md  2026-07-10.md  2026-07-13.md  2026-07-14.md  2026-07-16.md  2026-07-17.md  2026-07-24.md  _next-session.md
docs/planning/: PRD-v1.5.md  PRD-v2.md  PRD.md  architecture-v2-copilot.md  architecture.md  brainstorm-doku.md  claude-design-prompt.md  epics.md
docs/sprints/: ledger.json  retro-sprint-1.md  retro-sprint-10.md  retro-sprint-11.md  retro-sprint-12.md  retro-sprint-13.md  retro-sprint-14.md  retro-sprint-2.md  retro-sprint-3.md  retro-sprint-4.md  retro-sprint-5.md  retro-sprint-6.md  retro-sprint-7.md  retro-sprint-8.md  retro-sprint-9.md  sprint-1.md  sprint-10.md  sprint-11.md  sprint-12.md  sprint-13.md  sprint-14.md  sprint-15.md  sprint-2.md  sprint-3.md  sprint-4.md  sprint-5.md  sprint-6.md  sprint-7.md  sprint-8.md  sprint-9.md
spike/: README.md  a-milkdown.html  b-cm6.html  index.html  package-lock.json  package.json
spike/corpus/: 02-ux-spec.md  06-agents.md  07-readme.md  08-syntax-variety.md  09-stress-500k.md  generate-stress.mjs
spike/npu-17.1/: README.md  bench.config.example.json  bench.mjs  longdoc.mjs
spike/rag-15.1/: README.md  bench.mjs  corpus.mjs  queries.mjs
spike/src/: a-milkdown.ts  b-cm6.ts  corpus.ts  (+3 more)
src/: App.svelte  README.md  app.css  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  openai.rs  sidecar.rs
(+76 files in other folders)
