[package]
name = "doku"
version = "0.1.0"
description = "Doku — lire et écrire, sans friction"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "native-tls"] }
futures-util = "0.3"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "sync"] }

# Job Object Windows (13.2) : kill fiable de l'arbre du sidecar (KILL_ON_JOB_CLOSE) même au
# crash de Doku. Version alignée sur celle déjà résolue par Tauri (pas de 2e copie).
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Credentials",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
